--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,12 @@ AOE-exp/
 !TGCPerformanceAddon.mod
 !/TGCStreamerMode/
 !TGCStreamerMode.mod
+!/TGCBelleCartographieMap-noglobohomo
+!/TGCHFMMap-noglobohomo
+!/TGCPastelMap-noglobohomo
+!TGCPastelMapOLD.mod
+!TGCHFMMapOLD.mod
+!TGCBelleCartographieMapOLD.mod
 TGCStatehoodMechanic/localisation/00_statehood_mechanic.csv
 TGCStatehoodMechanic/localisation/00_decisions-states.csv
 TGCStatehoodMechanic/decisions/StateMechanic.txt
