--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,8 @@ AOE-exp/
 !TGCPastelMap.mod
 !/TGCStatehoodMechanic/
 !TGCStatehoodMechanic.mod
+!/TGCLessCombatRNG/
+!TGCLessCombatRNG.mod
 !/TGCCountriesEndonymicLocalization/
 !TGCCountriesEndonymicLocalization.mod
 !/TGCDirectImmigration/
