--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ TGCStatehoodMechanic/common/defines.lua
 TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
 TGCCountriesEndonymicLocalization.mod
 TGCStatehoodMechanic.mod
+TGC/history/plurality.py
