Strength rebalance for Submod

--- a/.gitignore
+++ b/.gitignore
@@ -62,8 +62,8 @@ AOE-exp/
 !TGCPastelMap.mod
 !/TGCStatehoodMechanic/
 !TGCStatehoodMechanic.mod
-!/TGCLessCombatRNG/
-!TGCLessCombatRNG.mod
+!/TGCCombatReimagined/
+!TGCCombatReimagined.mod
 !/TGCCountriesEndonymicLocalization/
 !TGCCountriesEndonymicLocalization.mod
 !/TGCDirectImmigration/
