--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,8 @@ AOE-exp/
 !TGCPerformanceAddon.mod
 !/TGCStreamerMode/
 !TGCStreamerMode.mod
+!/TGCAliceCompat/
+!TGCAliceCompat.mod
 TGCStatehoodMechanic/localisation/00_statehood_mechanic.csv
 TGCStatehoodMechanic/localisation/00_decisions-states.csv
 TGCStatehoodMechanic/decisions/StateMechanic.txt
