Temp Patch to remove errors on Alice's side

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,8 @@ AOE-exp/
 !TGCStreamerMode.mod
 !/TGCAliceCompat/
 !TGCAliceCompat.mod
+!/TGCAliceTempPatch/
+!TGCAliceTempPatch.mod
 TGCStatehoodMechanic/localisation/00_statehood_mechanic.csv
 TGCStatehoodMechanic/localisation/00_decisions-states.csv
 TGCStatehoodMechanic/decisions/StateMechanic.txt
