--- a/.gitignore
+++ b/.gitignore
@@ -74,8 +74,8 @@ AOE-exp/
 !TGCStreamerMode.mod
 !/TGCAliceCompat/
 !TGCAliceCompat.mod
-!/TGCAliceTempPatch/
-!TGCAliceTempPatch.mod
+!/TGCFantasyFormables/
+!TGCFantasyFormables.mod
 TGCStatehoodMechanic/localisation/00_statehood_mechanic.csv
 TGCStatehoodMechanic/localisation/00_decisions-states.csv
 TGCStatehoodMechanic/decisions/StateMechanic.txt
