Force Win-1252 encoding

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 # Auto detect text files and perform LF normalization
-*.txt encoding=cp1252
-*.lua encoding=cp1252
-*.csv encoding=cp1252
+*.txt working-tree-encoding=cp1252 git-encoding=cp1252 eol=lf
+*.csv working-tree-encoding=cp1252 git-encoding=cp1252 eol=lf
+*.lua working-tree-encoding=cp1252 git-encoding=cp1252 eol=lf
