HFM colors back

--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,7 @@ AOE-exp/
 !/TGC Niche Submods
 !/TGCApocalypse1836.mod
 !/TGCHFMStyleCultureColors/
-!TGCHFMStyleCultureColors.mod
+!TGCHFMColors.mod
 !/TGCHFMMap/
 !TGCHFMMap.mod
 !/TGCPastelMap/
