--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,8 @@ AOE-exp/
 !/TGCApocalypse1836
 !/TGC Niche Submods
 !/TGCApocalypse1836.mod
-!/TGCHFMStyleCultureColors/
-!TGCHFMColors.mod
+!/TGCFantasyFormables/
+!TGCFantasyFormables.mod
 !/TGCHFMMap/
 !TGCHFMMap.mod
 !/TGCPastelMap/
