New Screenshot submod

--- a/.gitignore
+++ b/.gitignore
@@ -73,11 +73,9 @@ AOE-exp/
 !/TGCStreamerMode/
 !TGCStreamerMode.mod
 !TGCLowRam
-TGCStatehoodMechanic/localisation/00_statehood_mechanic.csv
-TGCStatehoodMechanic/localisation/00_decisions-states.csv
-TGCStatehoodMechanic/decisions/StateMechanic.txt
-TGCStatehoodMechanic/common/defines.lua
+!/TGCScreenshotMode/
+!/TGCScreenshotMode.mod
+!TGCPerformanceAddon.mod
 TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
 TGCCountriesEndonymicLocalization.mod
-TGCStatehoodMechanic.mod
 *.py
