HFM Culture colors submod back on the menu

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,6 @@
 *.exe
 *.out
 *.app
-AOE-exp/
 
 # To prevent extra Mac files from annoying people like rderekp
 **.DS_Store
@@ -41,13 +40,7 @@ AOE-exp/
 !/TGC/
 !.gitattributes
 !.gitignore
-!*\ Changelog\ -\ TGC.txt
 !README.md
-!LÉEME\ (README\ in\ Spanish).md
-!TGC\ -\ Best\ Practices.txt
-!Tracked\ issues\ and\ suggestions.txt
-!/Templates/
-!/Unused Files/
 !TGC.mod
 
 # Submods
@@ -60,22 +53,10 @@ AOE-exp/
 !TGCHFMMap.mod
 !/TGCPastelMap/
 !TGCPastelMap.mod
-!/TGCStatehoodMechanic/
-!TGCStatehoodMechanic.mod
-!/TGCLessCombatRNG/
-!TGCLessCombatRNG.mod
-!/TGCCountriesEndonymicLocalization/
-!TGCCountriesEndonymicLocalization.mod
 !/TGCDirectImmigration/
 !TGCDirectImmigration.mod
 !/TGCPerformanceAddon/
 !TGCPerformanceAddon.mod
-!/TGCStreamerMode/
-!TGCStreamerMode.mod
-!TGCLowRam
-!/TGCScreenshotMode/
-!/TGCScreenshotMode.mod
-!TGCPerformanceAddon.mod
-TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
-TGCCountriesEndonymicLocalization.mod
-*.py
+!/TGC Niche Submods/*
+!TGCCountriesEndonymicLocalization
+!TGCCountriesEndonymicLocalization.mod
