edited .mod file for dod

--- a/.gitignore
+++ b/.gitignore
@@ -60,5 +60,5 @@
 !/TGC Niche Submods/*
 !TGCCountriesEndonymicLocalization
 !TGCCountriesEndonymicLocalization.mod
-!Divergences of Darkness
 !TGC - Divergences of Darkness
+!TGC - Divergences of Darkness.mod
