--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@
 !TGCCountriesEndonymicLocalization.mod
 !TGCDivergencesOfDarkness
 !TGCDivergencesOfDarkness.mod
+!TGCDivergencesOfDarknessTest
+!TGCDivergencesOfDarknessTest.mod
